# sevak

./: .gitignore  README.md  config.py.example  docker-compose.yml  main.py  pyproject.toml
comm/: handlers.py  server.py  telegram_bot.py
db/: connection.py
db/models/: __init__.py  history.py  memory.py
llm/: commands.py  connect.py  connect_v2.py  memory.py  worker.py
migrations/: env.py
migrations/versions/: 11932e9557d2_drop_system_prompt_and_updated_at_from_.py  4609f8a7d66b_create_chat_history_table.py  7018e01ea217_add_session_id_to_episodes_and_remove_.py  b039435c6fa2_rename_ep_id_and_add_ep_ids_to_chat_.py  b2a7d9579673_drop_active_ep_id_from_chat_history.py  c1e9dfe789a3_change_chat_history_to_request_response_.py  cad0acd9bab1_add_memory_tables.py  df220b9d6474_replace_request_and_response_with_.py  f419011736ce_replace_memory_relation_with_predicates_.py
prompts/: instruction.py  system_prompt.py
skills/memory/: tools.py
utils/: Modelfile  diti.bash  helpers.py  setup_logging.py  truncate_db.py
