[project]
name = "sevak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "colorlog>=6.10.1",
    "fastapi>=0.136.1",
    "ipdb>=0.13.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-ollama>=1.1.0",
    "langchain-postgres>=0.0.17",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-postgres>=3.0.5",
    "pydantic-ai>=1.89.1",
    "pydantic-ai-slim[duckduckgo,web]>=1.89.1",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.46.0",
    "watchfiles>=1.1.1",
]
